manifest/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: webserver
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: webserver
  type: ClusterIP
